Cobertura is now thread safe!